# Autonomous-Control

./: CMakeLists.txt  EdgeDetection  EdgeDetection.cpp  HelloWorld.java  README.md  camTest.py  camToNp.py  makefile  planning.md
Correlation/: Correlation  Correlation.cpp  Correlation2.cpp  EdgeDetection.cpp  makefile
E101/: readme.txt
E101/LibE101/: LibE101.cbp  LibE101.depend  LibE101.layout  graphics.cpp  lib_test.cpp  lib_test.cpp~  main.cpp  main.h
E101/LibTest/libtest/: libtest.cbp  libtest.depend  libtest.layout  lt  lt.cpp~  readme.txt  readme.txt~
Filters/: EdgeDetection
MoreFilters/: EdgeDetection  EdgeDetection.cpp
PD-Controller/: EdgeDetection  EdgeDetection.cpp  PD-Controller  PD-Controller.cpp  makefile
webDisplay/: app.py
webDisplay/templates/: layout.html
